# agent-firewall

./: .gitignore  README.md  pyproject.toml
agent_firewall/: __init__.py  approvals.py  cli.py  config.py  default_policy.yaml  engine.py  gemini_shim.py  judge.py  metrics.py  models.py  openai_shim.py  proxy.py  smoke.py  streaming.py
agent_firewall/detectors/: __init__.py  actions.py  injection.py  pii.py
examples/: demo_agent.py  sample_request.json  sample_response.json
tests/: test_approvals_web.py  test_engine.py  test_gemini_shim.py  test_hardening.py  test_injection.py  test_judge.py  test_openai_shim.py  test_pii.py  test_proxy.py
