[project]
name = "agent-firewall"
version = "0.1.0"
description = "Runtime guardrail proxy for LLM agents — prompt-injection detection, PII masking, dangerous-action blocking, and human-in-the-loop approval. Anthropic Messages API compatible, framework-independent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
agent-firewall = "agent_firewall.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_firewall"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
